--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     <nav class="navbar" id="navbar">
         <div class="container">
             <div>
-                <div class="navbar-link"><a href="">ABOUT</a></div>
-                <div class="navbar-link"><a href="">SKILLS</a></div>
-                <div class="navbar-link"><a href="">PROJECTS</a></div>
-                <div class="navbar-link"><a href="">CONTACT ME</a></div>
+                <div class="navbar-link"><a href="#about">ABOUT</a></div>
+                <div class="navbar-link"><a href="#skills">SKILLS</a></div>
+                <div class="navbar-link"><a href="#projects">PROJECTS</a></div>
+                <div class="navbar-link"><a href="#contact">CONTACT ME</a></div>
             </div>
             <div class="resume">
-                <a href="">
+                <a href="./files/resume.pdf">
                     RESUME
                 </a>
             </div>
@@ -45,7 +45,7 @@
     <div class="navbar-slice"></div>
     <!-- end navbar -->
     <!-- start about -->
-    <div class="about">
+    <div class="about" id="about">
         <div class="container">
             <div class="title">ABOUT ME</div>
             <div class="about-content">
@@ -56,7 +56,7 @@
     <!-- end about -->
     <!-- start skills -->
     <div class="skills-topSlice"></div>
-    <div class="skills">
+    <div class="skills" id="skills">
         <div class="container">
             <div class="title">MY SKILLS</div>
             <div class="skills-lists">
@@ -92,7 +92,7 @@
 
     <!-- start projects -->
 
-    <div class="projects">
+    <div class="projects" id="projects">
         <div class="container">
             <div class="title">PROJECTS</div>
             <div class="projects-list">
@@ -107,7 +107,7 @@
 
     <!-- start contact -->
     <div class="contact-topSlice"></div>
-    <div class="contact">
+    <div class="contact" id="contact">
         <div class="container">
             <div class="title">CONTACT ME</div>
             <form action="post" class="contact-form">
