--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
             <form class="contact-form" id="form" data-netlify="true">
                 <input type="text" name="name" id="name" placeholder="Name">
                 <input type="text" name="email" id="email" placeholder="E-mail">
-                <textarea name="" id="message" cols="30" rows="10" placeholder="Message" name="message"></textarea>
+                <textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
+                <div data-netlify-recaptcha="true"></div>
                 <button class="contact-button">SEND</button>
             </form>
         </div>
@@ -169,13 +170,13 @@
     <!-- end contact -->
 
     <!-- start tab-menu -->
-    <div class="tabMenu">
+    <!-- <div class="tabMenu">
         <div class="about"></div>
         <div class="skills"></div>
         <div class="projects"></div>
         <div class="contact"></div>
         <div class="resume"></div>
-    </div>
+    </div> -->
     <!-- end tab-menu -->
 
 </body>
