--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,10 +14,10 @@
     <!-- end importing index js -->
 
     <!-- importing smtp js start -->
-    <script src="https://smtpjs.com/v3/smtp.js">
-    </script>
+    <!-- <script src="https://smtpjs.com/v3/smtp.js"> -->
+    <!-- </script> -->
     <!-- end importing smtp js -->
-    <script src="./scripts/smtp.js"></script>
+    <!-- <script src="./scripts/smtp.js"></script> -->
 
     <!-- importing font-awesome start-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -53,7 +54,7 @@
             </div>
             <div class="resume">
                 <a href="./files/resume.pdf">
-                    RESUME
+                    <b>RESUME</b>
                 </a>
             </div>
         </div>
@@ -87,7 +88,7 @@
                     <lottie-player src="https://assets3.lottiefiles.com/private_files/lf30_WdTEui.json"  background="transparent"  speed="1"   loop  autoplay class="lottie"></lottie-player>
                 </div>
                 <div class="about-text">
-                    Hello, I am Suman Saurav. I am an ECE undergrad currently studying at Thapar Institute of Technology. I have holastic knowledge of Web Technology and I have a serious passion for creating intuitive and dynamic user experiences. 
+                    Hello, My name is  Suman Saurav. I am an ECE undergrad currently studying at Thapar Institute of Technology. I have holastic knowledge of Web Technology and I have a serious passion for creating intuitive and dynamic user experiences. 
                 </div>
             </div>
         </div>
@@ -110,6 +111,7 @@
                 <div class="skills-backend">
                     <img src="./imges/server.svg" alt="">
                     <div class="skills-name">BACKEND</div>
+                    <div>DJANGO</div>
                     <div>EXPRESS JS</div>
                     <div>NODE JS</div>
                     <div>PHP</div>
@@ -135,18 +137,24 @@
         <div class="container">
             <div class="title">PROJECTS</div>
             <div class="projects-list">
-                <div class="projects-project">
-                    <div class="projects-gif"></div>
-                    <img src="./imges/github.svg" class="projects-github" alt="">
-                </div>
-                <div class="projects-project">
-                    <div class="projects-gif"></div>
-                    <img src="./imges/github.svg" class="projects-github" alt="">
-                </div>
-                <div class="projects-project">
-                    <div class="projects-gif"></div>
-                    <img src="./imges/github.svg" class="projects-github" alt="">
-                </div>
+                <a href="https://serene-northcutt-d697c5.netlify.app/" class="projects-project" id="projects-list-ecommerce" >
+                    <!-- <div class="projects-gif"></div> -->
+                    <a href="">
+                        <img src="./imges/github.svg" class="projects-github" alt="">
+                    </a>
+                </a>
+                <a href="https://app.netlify.com/sites/epic-euclid-e5aa5a/overview" class="projects-project" id="projects-list-circuit">
+                    <!-- <div class="projects-gif"></div> -->
+                    <a href="">
+                        <img src="./imges/github.svg" class="projects-github" alt="">
+                    </a>
+                </a>
+                <a href="#" class="projects-project" id="projects-list-ml">
+                    <!-- <div class="projects-gif"></div> -->
+                    <a href="">
+                        <img src="./imges/github.svg" class="projects-github" alt="">
+                    </a>
+                </a>
             </div>
         </div>
     </div>
