fixed title bar

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Suman Saurav</title>
+    <!-- titlebar icon start-->
+    <link rel="icon" href="./imges/icon.svg" type="image/icon type">
+    <!-- title icon end -->
     
     <!-- importing index css start -->
     <link rel="stylesheet" href="./css/index.css">
