--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <a href="#skills" class="navbar-link">Skills</a>
                     <a href="#projects" class="navbar-link">Projects</a>
                     <a href="#contacts" class="navbar-link">Contacts</a>
-                    <a href="#" class="navbar-link button">Resume</a>
+                    <a href="./files/resume.pdf" class="navbar-link button">Resume</a>
                 </div>
             </div>
             
