--- a/index.html
+++ b/index.html
@@ -45,7 +45,29 @@
                     <a href="./files/resume.pdf" class="navbar-link button">Resume</a>
                 </div>
             </div>
-            
+        </nav>
+
+        <nav class="navbarS" id="navbarS">
+            <div class="container">
+                <div>
+                    <a href="" class="icon">
+                        <img src="./images/logo.svg" alt="">
+                    </a>
+                    <button id="burger">
+                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+                        width="24" height="24"
+                        viewBox="0 0 172 172"
+                        style=" fill:#000000;"><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#5a9f8b"><path d="M14.33333,35.83333v14.33333h143.33333v-14.33333zM14.33333,78.83333v14.33333h143.33333v-14.33333zM14.33333,121.83333v14.33333h143.33333v-14.33333z"></path></g></g></svg>
+                    </button>
+                </div>
+                <div id="dropdown">
+                    <a href="#about" class="navbar-link">About</a>
+                    <a href="#skills" class="navbar-link">Skills</a>
+                    <a href="#projects" class="navbar-link">Projects</a>
+                    <a href="#contacts" class="navbar-link">Contacts</a>
+                    <a href="./files/resume.pdf" class="navbar-link button">Resume</a>
+                </div>
+            </div>
         </nav>
         <!-- leftbar -->
         <div class="leftBar">
