--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
                     <a href="#projects" class="navbar-link">Projects</a>
                     <a href="#contacts" class="navbar-link">Contacts</a>
                     <a href="./files/resume.pdf" class="navbar-link button">Resume</a>
+                    <div>
+                        <a href="https://github.com/Suman94310"><img src="./images/github.svg" alt="github"></a>
+                        <a href="https://www.linkedin.com/in/ssaurav25/"><img src="./images/linkedIn.svg" alt="linkedIn"></a>
+                    </div>
                 </div>
             </div>
         </nav>
